HVAC Backup 2/objects/Survey_Response__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Comment__c</fullName>
        <label>Answer Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <formula>Survey_Invitation__r.Service_Ticket__r.Work_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Converted_Number__c</fullName>
        <formula>IF(Answer__c = &quot;Yes&quot;, 10,
    IF(Answer__c = &quot;No&quot;, 5,
        IF(AND(NOT(ISBLANK(Answer__c)), ISNUMBER(Answer__c)), VALUE(Answer__c), 0)
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Converted Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(AND(( TEXT( Survey_Invitation__r.Filling_by_CCO__c )==&apos;Yes&apos;) ,(   Survey_Invitation__r.LastModifiedBy.Profile.Name   =&apos;BSL CCO&apos;)), &quot;Voice&quot;, &quot;SMS/ WhatsApp&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Invitation__c</fullName>
        <label>Survey Invitation</label>
        <referenceTo>Survey_Invitation__c</referenceTo>
        <relationshipLabel>Survey Response</relationshipLabel>
        <relationshipName>Survey_Response</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Response</relationshipLabel>
        <relationshipName>Survey_Response</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRN-{0000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>